# medical-image-compression

./: LICENCE  README.md  pyproject.toml
example/: example_evaluation.py
src/medical_image_compression/: __init__.py
src/medical_image_compression/evaluation/: __init__.py  evaluation.py  evaluation_metrics.py
src/medical_image_compression/image_processing/: __init__.py  read_image.py
src/medical_image_compression/miqa/: __init__.py  miqa.py
